# modules/dxp/apps/portal-workflow/portal-workflow-metrics-rest-api/src/main/java/com/liferay/portal/workflow/metrics/rest/resource/v1_0/AssigneeResource.java
@@ -14,10 +14,8 @@
 
 package com.liferay.portal.workflow.metrics.rest.resource.v1_0;
 
-import com.liferay.portal.kernel.search.Sort;
 import com.liferay.portal.vulcan.accept.language.AcceptLanguage;
 import com.liferay.portal.vulcan.pagination.Page;
-import com.liferay.portal.vulcan.pagination.Pagination;
 import com.liferay.portal.workflow.metrics.rest.dto.v1_0.Assignee;
 
 import javax.annotation.Generated;
@@ -41,8 +39,7 @@ import org.osgi.annotation.versioning.ProviderType;
 @ProviderType
 public interface AssigneeResource {
 
-	public Page<Assignee> getProcessAssigneesPage(
-			Long processId, Pagination pagination, Sort[] sorts)
+	public Page<Assignee> getProcessAssigneesPage(Long processId)
 		throws Exception;
 
 	public default void setContextAcceptLanguage(
