# modules/dxp/apps/portal-workflow/portal-workflow-metrics-rest-impl/rest-openapi.yaml
@@ -60,12 +60,10 @@ components:
                     description:
                         The user's ID.
                     format: int64
-                    readOnly: true
                     type: integer
                 name:
                     description:
                         The user's full name.
-                    readOnly: true
                     type: string
             type: object
         GenericError:
@@ -617,18 +615,6 @@ paths:
                   schema:
                       format: int64
                       type: integer
-                - in: query
-                  name: page
-                  schema:
-                      type: integer
-                - in: query
-                  name: pageSize
-                  schema:
-                      type: integer
-                - in: query
-                  name: sort
-                  schema:
-                      type: string
             responses:
                 200:
                     content:
