# modules/dxp/apps/portal-workflow/portal-workflow-metrics-rest-impl/src/main/java/com/liferay/portal/workflow/metrics/rest/internal/resource/v1_0/AssigneeResourceImpl.java
@@ -53,7 +53,7 @@ public class AssigneeResourceImpl extends BaseAssigneeResourceImpl {
 
 	@Override
 	public Page<Assignee> getProcessAssigneesPage(
-			Long processId, Pagination pagination, Sort[] sorts)
+			Long processId)
 		throws Exception {
 
 		SearchSearchRequest searchSearchRequest = new SearchSearchRequest();
