# modules/dxp/apps/portal-workflow/portal-workflow-metrics-rest-impl/src/main/java/com/liferay/portal/workflow/metrics/rest/internal/resource/v1_0/BaseAssigneeResourceImpl.java
@@ -59,7 +59,6 @@ import javax.ws.rs.GET;
 import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
-import javax.ws.rs.core.Context;
 import javax.ws.rs.core.MultivaluedHashMap;
 import javax.ws.rs.core.MultivaluedMap;
 import javax.ws.rs.core.UriInfo;
@@ -81,21 +80,13 @@ public abstract class BaseAssigneeResourceImpl
 	 */
 	@Override
 	@GET
-	@Parameters(
-		value = {
-			@Parameter(in = ParameterIn.PATH, name = "processId"),
-			@Parameter(in = ParameterIn.QUERY, name = "page"),
-			@Parameter(in = ParameterIn.QUERY, name = "pageSize"),
-			@Parameter(in = ParameterIn.QUERY, name = "sort")
-		}
-	)
+	@Parameters(value = {@Parameter(in = ParameterIn.PATH, name = "processId")})
 	@Path("/processes/{processId}/assignees")
 	@Produces({"application/json", "application/xml"})
 	@Tags(value = {@Tag(name = "Assignee")})
 	public Page<Assignee> getProcessAssigneesPage(
 			@NotNull @Parameter(hidden = true) @PathParam("processId") Long
-				processId,
-			@Context Pagination pagination, @Context Sort[] sorts)
+				processId)
 		throws Exception {
 
 		return Page.of(Collections.emptyList());
@@ -137,8 +128,7 @@ public abstract class BaseAssigneeResourceImpl
 			Map<String, Serializable> parameters, String search)
 		throws Exception {
 
-		return getProcessAssigneesPage(
-			(Long)parameters.get("processId"), pagination, sorts);
+		return getProcessAssigneesPage((Long)parameters.get("processId"));
 	}
 
 	@Override
